<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context=".LoanFragment"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:id="@+id/linear_layout_root"
        android:layout_width="162dp"
        android:layout_height="162dp"
        android:layout_marginBottom="19dp"
        android:background="@drawable/button_round_loan_qualification"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_loan_alert">

        <TextView
            android:id="@+id/textview_amount_display_loan_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Amount"
            android:textColor="@color/sweet_blues"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/due"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textview_duration_display_loan_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="duration"
                android:textColor="@color/sweet_blues"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textview_loan_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:text="@string/loan_qualified"
        android:textColor="@color/blue_ivy"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout_root"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="31dp"
        android:background="@drawable/rounded_linear_layout_sweet_blues"
        android:elevation="6dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button_apply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_root">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_with_border_ivy"
                android:text="@string/principal"
                tools:text="@string/principal" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_with_border_ivy"
                android:text="@string/intrest"
                tools:text="@string/intrest" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_with_border_ivy"
                android:text="@string/total_due"
                tools:text="@string/total_due" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_principal_loanpage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_with_border_swal" />

            <Button
                android:id="@+id/button_intrest_loan_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_with_border_swal" />

            <Button
                android:id="@+id/button_total_due_loanpage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_with_border_swal" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:background="@drawable/round_button_ivy"
        android:text="@string/apply_loan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/sweet_blues"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/textview_loan_alert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>